--- a/register.html
+++ b/register.html
@@ -29,21 +29,21 @@
             <div class="input-field col s12">
               <i class="material-icons prefix">email</i>
               <input type="email" id="email" class="validate" />
-              <label for="email">信箱</label>
+              <label for="email">Email</label>
             </div>
           </div>
           <div class="row">
             <div class="input-field col s12">
               <i class="material-icons prefix">vpn_key</i>
               <input type="password" id="password" class="validate" />
-              <label for="Password">密碼</label>
+              <label for="Password">Password</label>
             </div>
           </div>
 		   <div class="row">
             <div class="input-field col s12">
               <i class="material-icons prefix">vpn_key</i>
               <input type="password" id="password" class="validate" />
-              <label for="Password">確認密碼</label>
+              <label for="Password">Check Password</label>
             </div>
           </div>
           <div class="row center-align">
