--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><s
 <!-- ... 卡片 ... -->
         <div class="row">
             <div class="col s12 m6">
-              <div class="card blue-grey darken-1">
-                <div class="card-content white-text">
+              <div class="card ">
+                <div class="card-content ">
                     <p>I am a very simple card. I am good at containing small bits of information.
                   I am convenient because I require little markup to use effectively.</p>
                 </div>
@@ -70,8 +70,8 @@ html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><s
               </div>
             </div>
             <div class="col s12 m6">
-                <div class="card blue-grey darken-1">
-                  <div class="card-content white-text">
+                <div class="card ">
+                  <div class="card-content ">
                       <p>I am a very simple card. I am good at containing small bits of information.
                     I am convenient because I require little markup to use effectively.</p>
                   </div>
@@ -87,8 +87,8 @@ html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><s
                 
           <div class="row">
               <div class="col s12 m6">
-                <div class="card blue-grey darken-1">
-                  <div class="card-content white-text">
+                <div class="card ">
+                  <div class="card-content ">
                       <p>I am a very simple card. I am good at containing small bits of information.
                     I am convenient because I require little markup to use effectively.</p>
                   </div>
@@ -99,8 +99,8 @@ html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><s
                 </div>
               </div>
               <div class="col s12 m6">
-                  <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
+                  <div class="card ">
+                    <div class="card-content ">
                         <p>I am a very simple card. I am good at containing small bits of information.
                       I am convenient because I require little markup to use effectively.</p>
                     </div>
@@ -113,8 +113,8 @@ html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><s
             </div>        
         <div class="row">
             <div class="col s12 m6">
-              <div class="card blue-grey darken-1">
-                <div class="card-content white-text">
+              <div class="card ">
+                <div class="card-content ">
                     <p>I am a very simple card. I am good at containing small bits of information.
                   I am convenient because I require little markup to use effectively.</p>
                 </div>
@@ -125,8 +125,8 @@ html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><s
               </div>
             </div>
             <div class="col s12 m6">
-                <div class="card blue-grey darken-1">
-                  <div class="card-content white-text">
+                <div class="card ">
+                  <div class="card-content ">
                       <p>I am a very simple card. I am good at containing small bits of information.
                     I am convenient because I require little markup to use effectively.</p>
                   </div>
